feat: add formating routes and handlers for name and email formatting
