# api/src/app.rs
@@ -25,11 +25,7 @@ use crate::{
     http::{
         authentication::routes::{
             authentication_routes, refresh_cookie_routes, unauthenticated_routes,
-        },
-        common::middleware::{auth::AuthRefreshMiddleware, tracing::tracing_middleware},
-        driver::routes::driver_routes,
-        update::routes::update_routes,
-        workday::routes::workday_routes,
+        }, common::middleware::{auth::AuthRefreshMiddleware, tracing::tracing_middleware}, driver::routes::driver_routes, formating::routes::formating_routes, update::routes::update_routes, workday::routes::workday_routes
     },
 };
 
@@ -125,6 +121,7 @@ impl App {
             .merge(protected_router)
             .merge(authentication_routes())
             .merge(unauthenticated_routes())
+            .merge(formating_routes())
             .merge(update_routes())
             .layer(cors)
             .layer(
