# api/src/http/mod.rs
@@ -1,6 +1,7 @@
 pub mod authentication;
 pub mod common;
 pub mod driver;
+pub mod formating;
 pub mod health;
 pub mod update;
 pub mod workday;
